[lworld] C2 compilation fails with "assert(argument(0)->bottom_type()->isa_ptr()) failed: must be"

XMLWordPrintable

      # Internal Error (/oracle/valhallaExp/open/src/hotspot/share/opto/graphKit.hpp:361), pid=17034, tid=17047
      # assert(argument(0)->bottom_type()->isa_ptr()) failed: must be

      Current CompileTask:
      C2: 4297 251 !b compiler.valhalla.valuetypes.TestNativeClone::test1 (8 bytes)

      Stack: [0x00007f5fb8080000,0x00007f5fb8181000], sp=0x00007f5fb817cae0, free space=1010k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1a41b2c] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
      V [libjvm.so+0x1a42abf] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xbdea1a] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
      V [libjvm.so+0x135932a] GraphKit::null_check_receiver()+0x5a
      V [libjvm.so+0x1347244] LibraryCallKit::inline_native_clone(bool)+0x64
      V [libjvm.so+0x135860c] LibraryIntrinsic::generate(JVMState*)+0x19c
      V [libjvm.so+0xce1cc0] Parse::do_call()+0x4b0
      V [libjvm.so+0x16bea5b] Parse::do_one_bytecode()+0x2b1b
      V [libjvm.so+0x16abb8a] Parse::do_one_block()+0x39a
      V [libjvm.so+0x16ac731] Parse::do_all_blocks()+0x1d1
      V [libjvm.so+0x16b028b] Parse::Parse(JVMState*, ciMethod*, float)+0xe3b
      V [libjvm.so+0x9025fc] ParseGenerator::generate(JVMState*)+0x1fc
      V [libjvm.so+0xce1cc0] Parse::do_call()+0x4b0
      V [libjvm.so+0x16bea5b] Parse::do_one_bytecode()+0x2b1b
      V [libjvm.so+0x16abb8a] Parse::do_one_block()+0x39a
      V [libjvm.so+0x16ac731] Parse::do_all_blocks()+0x1d1
      V [libjvm.so+0x16b028b] Parse::Parse(JVMState*, ciMethod*, float)+0xe3b
      V [libjvm.so+0x9025fc] ParseGenerator::generate(JVMState*)+0x1fc
      V [libjvm.so+0xb37c47] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1017
      V [libjvm.so+0x900012] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
      V [libjvm.so+0xb458f0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
      V [libjvm.so+0xb465d9] CompileBroker::compiler_thread_loop()+0x269
      V [libjvm.so+0x19604d7] JavaThread::thread_main_inner()+0x287
      V [libjvm.so+0x1960731] JavaThread::run()+0x191
      V [libjvm.so+0x16448da] thread_native_entry(Thread*)+0xfa

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: