8209702: [lworld] C2 compilation fails with "assert(argument(0)->bottom_type()->isa_ptr()) failed: must be"

Reviewed-by: roland